--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -39,7 +39,7 @@ tasks.register('apiDocs', Groovydoc) {
 tasks.register('generateGuide', PublishGuide) {
 
     group = 'documentation'
-    dependsOn = ['apiDocs']
+    dependsOn = ['apiDocs', 'compileGroovy', 'compileTestGroovy', 'jar', 'test', 'processTestResources' ]
 
     targetDir = project.layout.buildDirectory.dir('docs').get().asFile
     sourceRepo = "https://github.com/${githubSlug}/edit/${githubBranch}/src/main/docs"
@@ -57,7 +57,7 @@ tasks.register('generateGuide', PublishGuide) {
             'javaee'   : 'https://docs.oracle.com/javaee/7/api/',
             'javase'   : 'https://docs.oracle.com/en/java/javase/11/docs/api/',
             'groovyapi': "https://docs.groovy-lang.org/${libs.versions.groovy.get()}/html/gapi/",
-            'grailsapi': "https://docs.grails.org/${libs.versions.grails.asProvider().get()}/api/",
+            'grailsapi': "https://docs.grails.org/${libs.versions.grails.get()}/api/",
             'gormapi'  : "https://gorm.grails.org/${libs.versions.gorm.get()}/api/",
             'springapi': "https://docs.spring.io/spring/docs/${libs.versions.spring.get()}/javadoc-api/"
     ]
