--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,47 +1,42 @@
 [versions]
-bytebuddy = '1.14.12'
 gpars = '1.2.1'
 grails = '7.0.0-SNAPSHOT'
-grails-gsp = '7.0.0-SNAPSHOT'
-grails-views = '4.0.0-SNAPSHOT'
-groovy = '4.0.22'
+groovy = '4.0.24'
 gorm = '9.0.0-SNAPSHOT'
-jakarta-annotation-api = '3.0.0'
 micronaut-http-client = '4.6.5'
 micronaut-serde-jackson = '2.10.2'
-objenesis = '3.3'
 rxjava = '1.3.8'
 rxjava2 = '2.2.21'
-slf4j = '1.7.36'
-spock = '2.3-groovy-4.0'
-spring = '6.1.13'
+spring = '6.2.0'
 
 [libraries]
-bytebuddy = { module = 'net.bytebuddy:byte-buddy', version.ref = 'bytebuddy' }
-grails-bootstrap = { module = 'org.grails:grails-bootstrap', version.ref = 'grails' }
-grails-core = { module = 'org.grails:grails-core', version.ref = 'grails' }
-grails-controllers = { module = 'org.grails:grails-plugin-controllers', version.ref = 'grails' }
-grails-datastore-core = { module = 'org.grails:grails-datastore-core', version.ref = 'gorm' }
-grails-datastore-gorm = { module = 'org.grails:grails-datastore-gorm', version.ref = 'gorm' }
-grails-datastore-gorm-test = { module = 'org.grails:grails-datastore-gorm-test', version.ref = 'gorm' }
-grails-web-common = { module = 'org.grails:grails-web-common', version.ref = 'grails' }
-grails-web-mvc = { module = 'org.grails:grails-web-mvc', version.ref = 'grails' }
+bytebuddy = { module = 'net.bytebuddy:byte-buddy' }
+grails-bootstrap = { module = 'org.grails:grails-bootstrap' }
+grails-bom = { module = 'org.grails:grails-bom', version.ref = 'grails' }
+grails-core = { module = 'org.grails:grails-core' }
+grails-controllers = { module = 'org.grails:grails-plugin-controllers' }
+grails-datastore-core = { module = 'org.grails:grails-datastore-core'  }
+grails-datastore-gorm = { module = 'org.grails:grails-datastore-gorm' }
+grails-datastore-gorm-test = { module = 'org.grails:grails-datastore-gorm-test' }
+grails-web-common = { module = 'org.grails:grails-web-common' }
+grails-web-mvc = { module = 'org.grails:grails-web-mvc'  }
 gpars = { module = 'org.codehaus.gpars:gpars', version.ref = 'gpars' }
-groovy-core = { module = 'org.apache.groovy:groovy', version.ref = 'groovy' }
-jakarta-annotation-api = { module = 'jakarta.annotation:jakarta.annotation-api', version.ref = 'jakarta-annotation-api' }
-objenesis = { module = 'org.objenesis:objenesis', version.ref = 'objenesis' }
+groovy-core = { module = 'org.apache.groovy:groovy' }
+jakarta-annotation-api = { module = 'jakarta.annotation:jakarta.annotation-api' }
+objenesis = { module = 'org.objenesis:objenesis' }
 rxjava = { module = 'io.reactivex:rxjava', version.ref = 'rxjava' }
 rxjava2 = { module = 'io.reactivex.rxjava2:rxjava', version.ref = 'rxjava2' }
-slf4j-api = { module = 'org.slf4j:slf4j-api', version.ref = 'slf4j' }
-slf4j-nop = { module = 'org.slf4j:slf4j-nop', version.ref = 'slf4j' }
-servlet-api = { module = 'javax.servlet:javax.servlet-api', version = '4.0.1' }
-spock-core = { module = 'org.spockframework:spock-core', version.ref = 'spock' }
-spring-beans = { module = 'org.springframework:spring-beans', version.ref = 'spring' }
-spring-core = { module = 'org.springframework:spring-core', version.ref = 'spring' }
-spring-context = { module = 'org.springframework:spring-context', version.ref = 'spring' }
-spring-tx = { module = 'org.springframework:spring-tx', version.ref = 'spring' }
-spring-web = { module = 'org.springframework:spring-web', version.ref = 'spring' }
+slf4j-api = { module = 'org.slf4j:slf4j-api' }
+slf4j-nop = { module = 'org.slf4j:slf4j-nop' }
+servlet-api = { module = 'jakarta.servlet:jakarta.servlet-api' }
+spock-core = { module = 'org.spockframework:spock-core' }
+spring-beans = { module = 'org.springframework:spring-beans' }
+spring-core = { module = 'org.springframework:spring-core' }
+spring-context = { module = 'org.springframework:spring-context' }
+spring-test = { module = 'org.springframework:spring-test' }
+spring-tx = { module = 'org.springframework:spring-tx' }
+spring-web = { module = 'org.springframework:spring-web' }
 micronaut-serde-jackson = { module = 'io.micronaut.serde:micronaut-serde-jackson', version.ref = 'micronaut-serde-jackson' }
 micronaut-http-client = { module = 'io.micronaut:micronaut-http-client', version.ref = 'micronaut-http-client' }
-grails-views-json = { module = 'org.grails.plugins:views-json', version.ref = 'grails-views' }
-grails-views-json-templates = { module = 'org.grails.plugins:views-json-templates', version.ref = 'grails-views' }
+grails-views-json = { module = 'org.grails.plugins:views-json' }
+grails-views-json-templates = { module = 'org.grails.plugins:views-json-templates' }
