--- a/grails-plugin-events/build.gradle
+++ b/grails-plugin-events/build.gradle
@@ -15,11 +15,12 @@ dependencies {
     // https://github.com/gradle/gradle/issues/21539
     api project(':grails-events-transform')
 
-    implementation libs.grails.bootstrap
-    implementation libs.grails.core
+    compileOnly libs.grails.bootstrap
+    compileOnly libs.grails.core
 
     testImplementation libs.spock.core
 
+    testRuntimeOnly libs.grails.bootstrap
     testRuntimeOnly libs.slf4j.nop // Get rid of warning about missing slf4j implementation during test task
 
 }
