--- a/grails-plugin-events/build.gradle
+++ b/grails-plugin-events/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     // https://github.com/gradle/gradle/issues/21539
     api project(':grails-events-transform')
 
+    // As this is a plugin these dependencies will be provided by the Grails application
+    // This removes circular dependencies
     compileOnly libs.grails.bootstrap
     compileOnly libs.grails.core
 
