refactor: align plugin inclusion (#171)

--- a/examples/pubsub-demo/build.gradle
+++ b/examples/pubsub-demo/build.gradle
@@ -1,12 +1,10 @@
 plugins {
     id 'groovy'
+    id 'org.grails.grails-web'
 }
 
 version = rootProject.version
 group = 'pubsub.demo'
-
-// Must be applied after version is set
-apply plugin: 'org.grails.grails-web'
 
 dependencies {
 
