--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,16 @@ subprojects {
                 url = 'https://groovy.jfrog.io/artifactory/libs-snapshot-local/'
             }
         }
+        if (System.getenv("GITHUB_MAVEN_PASSWORD") && !grailsVersion.endsWith('-SNAPSHOT')) {
+            System.out.println("Adding Grails Core Repo")
+            maven {
+                url = 'https://maven.pkg.github.com/grails/grails-core'
+                credentials {
+                    username = 'DOES_NOT_MATTER'
+                    password = System.getenv("GITHUB_MAVEN_PASSWORD")
+                }
+            }
+        }
     }
 
     dependencies {
