--- a/settings.gradle
+++ b/settings.gradle
@@ -1,42 +1,29 @@
 plugins {
-    id "com.gradle.enterprise" version '3.16.2'
-    id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.13'
+    id 'com.gradle.develocity' version '3.19'
+    id 'com.gradle.common-custom-user-data-gradle-plugin' version '2.0.2'
 }
 
-gradleEnterprise {
+def isCI = System.getenv('CI') != null
+def isLocal = !isCI
+def isAuthenticated = System.getenv('DEVELOCITY_ACCESS_KEY') != null
+develocity {
     server = 'https://ge.grails.org'
     buildScan {
-        publishAlwaysIf(System.getenv('CI') == 'true')
-        publishIfAuthenticated()
-        uploadInBackground = System.getenv('CI') == null
-        capture {
-            taskInputFiles = true
-        }
+        tag('grails')
+        tag('grails-async')
+        publishing.onlyIf { isAuthenticated }
+        uploadInBackground = isLocal
     }
 }
-
 buildCache {
-    local { enabled = System.getenv('CI') != 'true' }
-    remote(gradleEnterprise.buildCache) {
-        def isAuthenticated = System.getenv('GRADLE_ENTERPRISE_ACCESS_KEY')
-        push = System.getenv('CI') == 'true' && isAuthenticated
+    local { enabled = isLocal }
+    remote(develocity.buildCache) {
+        push = isCI && isAuthenticated
         enabled = true
     }
 }
 
 rootProject.name = 'grails-async'
-
-dependencyResolutionManagement {
-    versionCatalogs {
-        libs {
-            def groovyVersion = System.getenv('GROOVY_VERSION')
-            if (groovyVersion) {
-                logger.warn "Using custom version $groovyVersion of Groovy due to GROOVY_VERSION being set."
-                version('groovy', groovyVersion)
-            }
-        }
-    }
-}
 
 include 'docs'
 include 'grails-async-core'
