--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,14 @@ githubSlug=grails/grails-async
 githubBranch=6.0.x
 developers=Graeme Rocher, Mattias Reichel
 
+grailsVersion=7.0.0-SNAPSHOT
+grailsGradlePluginVersion=7.0.0-SNAPSHOT
+
+# TODO: These are for the documentation links, can these be referenced from the bom instead?
+spring-framework.version=6.2.1
+grails-datastore.version=9.0.0-SNAPSHOT
+groovy.version=4.0.24
+
 #gpars docs is currently not available with https
 gparsdocs=http://gpars.org/1.2.1/groovydoc
 rxjavadocs=https://reactivex.io/RxJava/1.x/javadoc
