--- a/grails-plugin-async/build.gradle
+++ b/grails-plugin-async/build.gradle
@@ -7,29 +7,30 @@ plugins  {
 }
 
 dependencies {
+    implementation platform("org.grails:grails-bom:${grailsVersion}")
 
     api project(':grails-async-core')
     api project(':grails-events-compat')
     api project(':grails-events-core')
-    api libs.grails.core
-    api libs.grails.web.common
-    api libs.groovy.core
-    api libs.spring.beans
-    api libs.spring.context
-    api libs.spring.tx
+    api 'org.grails:grails-core'
+    api 'org.grails:grails-web-common'
+    api 'org.apache.groovy:groovy'
+    api 'org.springframework:spring-beans'
+    api 'org.springframework:spring-context'
+    api 'org.springframework:spring-tx'
 
-    implementation libs.grails.controllers
-    implementation libs.grails.web.mvc
-    implementation libs.spring.core
-    implementation libs.spring.web
+    implementation 'org.grails:grails-plugin-controllers'
+    implementation 'org.grails:grails-web-mvc'
+    implementation 'org.springframework:spring-core'
+    implementation 'org.springframework:spring-web'
 
-    compileOnly libs.servlet.api // Provided
+    compileOnly 'jakarta.servlet:jakarta.servlet-api' // Provided
 
-    testImplementation libs.spock.core
-    testImplementation libs.spring.test
-    testImplementation libs.servlet.api
+    testImplementation 'org.spockframework:spock-core'
+    testImplementation 'org.springframework:spring-test'
+    testImplementation 'jakarta.servlet:jakarta.servlet-api'
 
-    testRuntimeOnly libs.slf4j.nop // Get rid of warning about missing slf4j implementation during test task
+    testRuntimeOnly 'org.slf4j:slf4j-nop' // Get rid of warning about missing slf4j implementation during test task
 
 }
 
