--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,25 @@
 import io.github.gradlenexus.publishplugin.InitializeNexusStagingRepository
 
-plugins {
-    id 'groovy'
-    id 'io.github.gradle-nexus.publish-plugin'
+buildscript {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+        maven { url = 'https://repo.grails.org/grails/core' }
+    }
+    dependencies {
+        classpath 'io.github.gradle-nexus:publish-plugin:1.3.0'
+        classpath "org.grails:grails-gradle-plugin:${grailsGradlePluginVersion}"
+        classpath "org.grails:grails-docs:${grailsVersion}"
+    }
 }
 
+plugins {
+    id 'groovy'
+}
+
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+
 version = projectVersion
-ext.set('grailsVersion', libs.versions.grails.get())
 ext.set('isSnapshot', projectVersion.endsWith('-SNAPSHOT'))
 ext.set('isReleaseVersion', !isSnapshot)
 
@@ -71,11 +84,6 @@ subprojects {
             }
         }
     }
-
-    dependencies {
-        implementation platform(libs.grails.bom)
-    }
-
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
         testLogging {
