--- a/examples/pubsub-demo/build.gradle
+++ b/examples/pubsub-demo/build.gradle
@@ -7,6 +7,7 @@ version = rootProject.version
 group = 'pubsub.demo'
 
 dependencies {
+    implementation platform("org.grails:grails-bom:${grailsVersion}")
 
     implementation project(':grails-plugin-async')
     implementation project(':grails-plugin-events')
@@ -27,13 +28,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-logging'
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-    implementation libs.micronaut.serde.jackson
+    implementation 'io.micronaut.serde:micronaut-serde-jackson:2.10.2'
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.fusesource.jansi:jansi'
     runtimeOnly 'com.zaxxer:HikariCP'
 
-    testImplementation libs.micronaut.http.client
+    testImplementation 'io.micronaut:micronaut-http-client:4.6.5'
     testImplementation 'org.grails:grails-web-testing-support'
 }
 
