--- a/grails-async-rxjava/build.gradle
+++ b/grails-async-rxjava/build.gradle
@@ -7,16 +7,17 @@ plugins {
 group = 'org.grails'
 
 dependencies {
+    implementation platform("org.grails:grails-bom:${grailsVersion}")
 
     api project(':grails-async-core')
-    api libs.rxjava
+    api 'io.reactivex:rxjava:1.3.8'
 
-    implementation libs.groovy.core
-    implementation libs.slf4j.api
+    implementation 'org.apache.groovy:groovy'
+    implementation 'org.slf4j:slf4j-api'
 
-    testImplementation libs.spock.core
+    testImplementation 'org.spockframework:spock-core'
 
-    testRuntimeOnly libs.slf4j.nop // Get rid of warning about missing slf4j implementation during test task
+    testRuntimeOnly 'org.slf4j:slf4j-nop' // Get rid of warning about missing slf4j implementation during test task
 }
 
 apply from: rootProject.layout.projectDirectory.file('gradle/java-config.gradle')
