--- a/grails-events-transform/build.gradle
+++ b/grails-events-transform/build.gradle
@@ -7,34 +7,35 @@ plugins {
 group = 'org.grails'
 
 dependencies {
+    implementation platform("org.grails:grails-bom:${grailsVersion}")
 
     api project(':grails-events-core')
-    api libs.grails.datastore.core
-    api libs.spring.context
+    api 'org.grails:grails-datastore-core'
+    api 'org.springframework:spring-context'
 
-    compileOnly libs.grails.datastore.gorm, {
+    compileOnly 'org.grails:grails-datastore-gorm', {
         // TODO: Explain why this exclusion is done
         exclude group: 'org.grails', module: 'grails-datastore-gorm-validation'
     }
-    implementation libs.groovy.core
-    implementation libs.slf4j.api
-    implementation libs.spring.beans
-    implementation libs.spring.core
-    implementation libs.spring.tx
-    implementation libs.jakarta.annotation.api
+    implementation 'org.apache.groovy:groovy'
+    implementation 'org.slf4j:slf4j-api'
+    implementation 'org.springframework:spring-beans'
+    implementation 'org.springframework:spring-core'
+    implementation 'org.springframework:spring-tx'
+    implementation 'jakarta.annotation:jakarta.annotation-api'
 
-    testImplementation libs.grails.datastore.gorm, {
+    testImplementation 'org.grails:grails-datastore-gorm', {
         // TODO: Explain why this exclusion is done
         exclude group: 'org.grails', module: 'grails-datastore-gorm-validation'
     }
 
-    testImplementation libs.grails.datastore.gorm.test, {
+    testImplementation 'org.grails:grails-datastore-gorm-test', {
         // TODO: Explain why this exclusion is done (I don't know)
         exclude group: 'org.grails', module: 'grails-datastore-gorm-validation'
     }
-    testImplementation libs.spock.core
+    testImplementation 'org.spockframework:spock-core'
 
-    testRuntimeOnly libs.slf4j.nop // Get rid of warning about missing slf4j implementation during test task
+    testRuntimeOnly 'org.slf4j:slf4j-nop' // Get rid of warning about missing slf4j implementation during test task
 }
 
 apply from: rootProject.layout.projectDirectory.file('gradle/java-config.gradle')
