--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ slf4jVersion=2.0.16
 rxJava1Version=1.3.8
 rxJava2Version=2.2.21
 gparsVersion=1.2.1
+commonsLang3Version=3.14.0
 
 org.gradle.caching=true
 org.gradle.parallel=true
