--- a/settings.gradle
+++ b/settings.gradle
@@ -58,6 +58,7 @@ include (
         // Plugins
         'grails-plugin-codecs',
         'grails-plugin-controllers',
+        'grails-plugin-converters',
         'grails-plugin-databinding',
         'grails-plugin-datasource',
         'grails-plugin-domain-class',
