Updating events/async to support rxjava3

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ plexusSisuInjectVersion=2.6.0
 slf4jVersion=2.0.16
 rxJava1Version=1.3.8
 rxJava2Version=2.2.21
+rxJava3Version=3.1.10
 gparsVersion=1.2.1
 
 org.gradle.caching=true
