--- a/build.gradle
+++ b/build.gradle
@@ -247,7 +247,9 @@ subprojects { subproject ->
                             }
                         }
                         if (isGrailsRepoPublish) {
-                            url "https://repo.grails.org/grails/libs-snapshots-local"
+                            url = isPlugin ?
+                                    uri('https://repo.grails.org/grails/plugins3-snapshots-local') :
+                                    uri('https://repo.grails.org/grails/libs-snapshots-local')
                         } else {
                             url 'https://maven.pkg.github.com/grails/grails-core'
                         }
