Add graalvm versions to grails-bom, will be used in providedRuntime to exclude jars from war to reduce size significantly.

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,6 +47,7 @@ converters.version=6.0.0-SNAPSHOT
 directory-watcher.version=0.18.0
 flying-saucer-pdf-openpdf.version=9.4.0
 geb-spock.version=7.0
+graal-sdk.version=24.1.1
 grails-datastore.version=9.0.0-SNAPSHOT
 grails-datastore-gorm-hibernate5.version=9.0.0-SNAPSHOT
 grails-datastore-gorm-mongodb.version=9.0.0-SNAPSHOT
