--- a/dependabot/build.gradle
+++ b/dependabot/build.gradle
@@ -1,4 +1,4 @@
-// Generated on Fri Nov 22 09:58:56 CET 2024 by: ./gradlew :grails-bom:dependabotBuild
+// Generated on Tue Jan 14 16:31:57 EST 2025 by: ./gradlew :grails-bom:dependabotBuild
 plugins {
     id 'java-library'
 }
@@ -9,16 +9,18 @@ dependencies {
     api "org.asciidoctor:asciidoctorj:${project['asciidoctorj.version']}"
     api "com.bertramlabs.plugins:asset-pipeline-gradle:${project['asset-pipeline-gradle.version']}"
     api "com.bertramlabs.plugins:asset-pipeline-grails:${project['asset-pipeline-grails.version']}"
+    api "org.webjars.npm:bootstrap-icons:${project['bootstrap-icons.version']}"
+    api "org.webjars.npm:bootstrap:${project['bootstrap.version']}"
     api "net.bytebuddy:byte-buddy:${project['byte-buddy.version']}"
     api "commons-codec:commons-codec:${project['commons-codec.version']}"
     api "org.apache.commons:commons-text:${project['commons-text.version']}"
     api "org.grails.plugins:converters:${project['converters.version']}"
     api "io.methvin:directory-watcher:${project['directory-watcher.version']}"
     api "org.xhtmlrenderer:flying-saucer-pdf-openpdf:${project['flying-saucer-pdf-openpdf.version']}"
-    api "org.webjars.npm:bootstrap:${project['bootstrap.version']}"
-    api "org.webjars.npm:bootstrap-icons:${project['bootstrap-icons.version']}"
-    api "org.webjars.npm:jquery:${project['jquery.version']}"
     api "org.gebish:geb-spock:${project['geb-spock.version']}"
+    api "org.graalvm.sdk:graal-sdk:${project['graal-sdk.version']}"
+    api "org.graalvm.js:js:${project['graal-sdk.version']}"
+    api "org.graalvm.js:js-scriptengine:${project['graal-sdk.version']}"
     api "org.grails:grails-datastore-gorm-hibernate5:${project['grails-datastore-gorm-hibernate5.version']}"
     api "org.grails:grails-datastore-gorm-mongodb:${project['grails-datastore-gorm-mongodb.version']}"
     api "org.grails:grails-datastore-async:${project['grails-datastore.version']}"
@@ -27,9 +29,9 @@ dependencies {
     api "org.grails:grails-datastore-gorm-async:${project['grails-datastore.version']}"
     api "org.grails:grails-datastore-gorm-rx:${project['grails-datastore.version']}"
     api "org.grails:grails-datastore-gorm-support:${project['grails-datastore.version']}"
+    api "org.grails:grails-datastore-gorm-tck:${project['grails-datastore.version']}"
     api "org.grails:grails-datastore-gorm-test:${project['grails-datastore.version']}"
     api "org.grails:grails-datastore-gorm-validation:${project['grails-datastore.version']}"
-    api "org.grails:grails-datastore-gorm-tck:${project['grails-datastore.version']}"
     api "org.grails:grails-datastore-web:${project['grails-datastore.version']}"
     api "org.grails:grails-gdoc-engine:${project['grails-gdoc-engine.version']}"
     api "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
@@ -47,6 +49,7 @@ dependencies {
     api "com.github.javaparser:javaparser-core:${project['javaparser-core.version']}"
     api "jline:jline:${project['jline.version']}"
     api "net.java.dev.jna:jna:${project['jna.version']}"
+    api "org.webjars.npm:jquery:${project['jquery.version']}"
     api "org.jsoup:jsoup:${project['jsoup.version']}"
     api "org.mongodb:bson:${project['mongodb.version']}"
     api "org.mongodb:bson-record-codec:${project['mongodb.version']}"
@@ -63,6 +66,7 @@ dependencies {
     api "org.grails.plugins:rxjava2:${project['plugins-rxjava2.version']}"
     api "org.grails.plugins:rxjava:${project['plugins-rxjava.version']}"
     api "org.grails.plugins:scaffolding:${project['plugins-scaffolding.version']}"
+    api "org.grails.plugins:views-gradle:${project['plugins-views-gradle.version']}"
     api "org.grails.plugins:views-json-templates:${project['plugins-views-json-templates.version']}"
     api "org.grails.plugins:views-json:${project['plugins-views-json.version']}"
     api "org.grails.plugins:views-markup:${project['plugins-views-markup.version']}"
