--- a/grails-test-examples/async-events-pubsub-demo/build.gradle
+++ b/grails-test-examples/async-events-pubsub-demo/build.gradle
@@ -24,23 +24,21 @@ apply plugin: "org.grails.grails-gsp"
 dependencies {
     implementation platform(project(':grails-bom'))
 
-    implementation project(':grails-async-plugin')
-    implementation project(':grails-events-plugin')
+    implementation "org.grails.plugins:async"
+    implementation "org.grails.plugins:events"
 
-    implementation project(':grails-core')
-    implementation project(':grails-logging')
-    implementation project(':grails-plugin-databinding')
-    implementation project(':grails-plugin-interceptors')
-    implementation project(':grails-plugin-rest')
-    implementation project(':grails-plugin-services')
-    implementation project(':grails-plugin-url-mappings')
-    implementation project(':grails-web-boot')
+    implementation "org.grails:grails-core"
+    implementation "org.grails:grails-logging"
+    implementation "org.grails:grails-plugin-databinding"
+    implementation "org.grails:grails-plugin-interceptors"
+    implementation "org.grails:grails-plugin-rest"
+    implementation "org.grails:grails-plugin-services"
+    implementation "org.grails:grails-plugin-url-mappings"
+    implementation "org.grails:grails-web-boot"
 
     implementation "org.grails.plugins:gsp"
     implementation 'org.grails.plugins:views-json'
-    implementation 'org.grails.plugins:hibernate5', {
-        exclude group: 'org.grails', module: 'grails-bom'
-    }
+    implementation 'org.grails.plugins:hibernate5'
 
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -53,10 +51,7 @@ dependencies {
 
     testImplementation 'io.micronaut.serde:micronaut-serde-jackson:2.10.2'
     testImplementation 'io.micronaut:micronaut-http-client:4.6.5'
-    testImplementation project(':grails-test')
-    testImplementation 'org.grails:grails-web-testing-support', {
-        exclude group: 'org.grails', module: 'grails-test'
-    }
+    testImplementation 'org.grails:grails-web-testing-support'
 }
 
 bootRun {
