#13552 Correct bom * fix grails-async * fix grails-events * fix converters * fix testing support split * remove spotbugs from bom * add rxjava1, 2, 3 to bom (spring includes 3)

--- a/build.gradle
+++ b/build.gradle
@@ -405,7 +405,7 @@ subprojects { subproject ->
         testImplementation "org.junit.platform:junit-platform-runner"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 
-        compileOnly "com.github.spotbugs:spotbugs-annotations"
+        //compileOnly "com.github.spotbugs:spotbugs-annotations"
 
         if (subproject.name != "grails-docs") {
             // Logging
