--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,6 @@ plexusComponentApiVersion=1.0-alpha-33
 plexusSecDispatcherVersion=1.4
 plexusSisuInjectVersion=2.6.0
 slf4jVersion=2.0.16
-rxJava1Version=1.3.8
-rxJava2Version=2.2.21
-rxJava3Version=3.1.10
 gparsVersion=1.2.1
 
 org.gradle.caching=true
@@ -33,8 +30,8 @@ preventSnapshotPublish=false
 # https://github.com/grails/grails-gradle-plugin/issues/222
 slf4jPreventExclusion=true
 
-# Generated on Tue Jan 07 15:14:48 EST 2025 by: ./gradlew :grails-bom:syncProps
-# Only version value modifications allowed after this point. Do not insert or change version names.
+# Generated on Thu Jan 16 10:23:54 EST 2025 by: ./gradlew :grails-bom:syncProps
+# Only version value modifications allowed after this point. Do not insert or change version names. 
 ant.version=1.10.15
 asciidoctorj.version=3.0.0
 asset-pipeline-gradle.version=5.0.5
@@ -44,7 +41,6 @@ bootstrap-icons.version=1.11.3
 byte-buddy.version=1.15.5
 commons-codec.version=1.17.1
 commons-text.version=1.12.0
-converters.version=6.0.0-SNAPSHOT
 directory-watcher.version=0.18.0
 flying-saucer-pdf-openpdf.version=9.4.0
 geb-spock.version=7.0
@@ -53,7 +49,6 @@ grails-datastore-gorm-hibernate5.version=9.0.0-SNAPSHOT
 grails-datastore-gorm-mongodb.version=9.0.0-SNAPSHOT
 grails-gdoc-engine.version=1.0.1
 grails-gradle-plugin.version=7.0.0-SNAPSHOT
-grails-testing-support.version=4.0.0-SNAPSHOT
 groovy.version=4.0.24
 gsp.version=7.0.0-SNAPSHOT
 h2.version=2.3.232
@@ -73,8 +68,6 @@ plugins-geb.version=5.0.0-SNAPSHOT
 plugins-hibernate5.version=9.0.0-SNAPSHOT
 plugins-mongodb.version=9.0.0-SNAPSHOT
 plugins-neo4j.version=8.1.0
-plugins-rxjava.version=1.1.1
-plugins-rxjava2.version=2.0.0
 plugins-scaffolding.version=6.0.0-SNAPSHOT
 plugins-views-gradle.version=4.0.0-SNAPSHOT
 plugins-views-json.version=4.0.0-SNAPSHOT
@@ -90,8 +83,10 @@ profiles-rest-api-plugin.version=7.0.1
 profiles-vue.version=7.0.1
 profiles-web.version=7.0.1
 profiles-web-plugin.version=7.0.1
+rxjava.version=1.3.8
+rxjava2.version=2.2.21
+rxjava3.version=3.1.10
 spock.version=2.3-groovy-4.0
-spotbugs-annotations.version=4.8.6
 spring-boot.version=3.4.1
 springloaded.version=1.2.8.RELEASE
 views-json-testing-support.version=4.0.0-SNAPSHOT
