--- a/grails-async/rxjava/build.gradle
+++ b/grails-async/rxjava/build.gradle
@@ -2,7 +2,7 @@ dependencies {
     implementation platform(project(':grails-bom'))
 
     api project(':grails-async-core')
-    api "io.reactivex:rxjava:$rxJava1Version"
+    api "io.reactivex:rxjava"
 
     implementation 'org.apache.groovy:groovy'
     implementation 'org.slf4j:slf4j-api'
