--- a/grails-core/build.gradle
+++ b/grails-core/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     api project(":grails-bootstrap")
     api project(":grails-spring")
 
+    // This only needs the datastore version property because of how source jars are being created.
+    // Build will succeed, but assemble will fail without this because of task ordering in gradle.
     api "org.grails:grails-datastore-core:${project['grails-datastore.version']}"
 
     testImplementation "org.springframework:spring-jdbc"
