--- a/grails-test-suite-web/build.gradle
+++ b/grails-test-suite-web/build.gradle
@@ -25,7 +25,7 @@ dependencies {
                 project(':grails-web-databinding'),
                 project(':grails-spring')
 
-    testImplementation "org.grails.plugins:converters"
+    testImplementation project(":grails-plugin-converters")
     testImplementation "org.grails:grails-datastore-gorm-hibernate5"
     testImplementation "org.grails:grails-web-testing-support"
     testImplementation "org.grails.plugins:gsp"
