--- a/grails-test-suite-uber/build.gradle
+++ b/grails-test-suite-uber/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     testImplementation project(':grails-async-plugin')
     testImplementation "org.grails.plugins:gsp"
     testImplementation "org.grails:grails-gorm-testing-support"
-    testImplementation "org.grails:grails-web-testing-support"
+    testImplementation "org.grails:grails-web-testing-support", {
+        exclude module:'grails-testing-support'
+    }
+    testImplementation project(':grails-testing-support')
 
     testImplementation "com.fasterxml.jackson.core:jackson-databind"
 }
